exports[`BpkPopover should render correctly 1`] = `
<section
  className="bpk-popover"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner bpk-popover__inner--padded">
    My popover content
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "className" attribute 1`] = `
<section
  className="bpk-popover my-custom-class"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner bpk-popover__inner--padded">
    My popover content
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "padded" attribute equal to false 1`] = `
<section
  className="bpk-popover"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner">
    My popover content
  </div>
</section>
`;
